@@ -1,10 +1,9 @@
 # Base de Datos
 # db_url=jdbc:mysql://data.appcar.com.ar:23849/integrity?zeroDateTimeBehavior=convertToNull
-db_url=jdbc:mysql://localhost:3307/score?zeroDateTimeBehavior=convertToNull
+db_url=jdbc:mysql://data.appcar.com.ar:23849/score?zeroDateTimeBehavior=convertToNull
 db_class=com.mysql.jdbc.Driver
 db_usuario=snapcar
-# db_password=oycobe
-db_password=snapcar
+db_password=oycobe
 db_tipo=MYSQL
 
 # Servidor SMTP
@@ -15,12 +14,10 @@ smtp_user=SnapCar
 smtp_password=ABGCPPsUFHNZcVOom9LKxg
 
 # Cuentas de mail
-mail_from=SnapCar Integrity<no-responder@snapcar.com.ar>
-mail_admin=andres.galaz@gmail.com
-mail_test=andres.galaz@snapcar.com.ar
+mail_from=SnapCar Integrity <no-responder@snapcar.com.ar>
 
 # Servidor REST Mail Mandril
 ws_mail_url=https://mandrillapp.com/api/1.0/messages/send-template.json
 ws_mail_key=r-7smYWoFJApQ-k2oJWCzA
 ws_mail_reply_to=no_responder@snapcar.com.ar
-ws_mail_bcc_address=andygalaxia@aol.com
+ws_mail_bcc_address=bruno.giel@snapcar.com.ar
