@@ -21,8 +21,8 @@ import snapCar.net.CallWsMail;
 
 /**
  * <p>
- * Se envía al momento de cierre de la facturación a los clientes que tengan al menos 1 días sin sincronizar a la fecha
- * de cierre. Este proceso buscar los que cerraron justamente ayer.
+ * Envía mensajes a los clientes dos dís antes del cierre de facturación. Discrimina los que tienen mas de 5 días sin
+ * sincronizar.
  * </p>
  * <p>
  * Utiliza la tabla temporal wMemoryCierreTransf que se crea con el procedimiento: prControlCierreTransferenciaInicio
@@ -31,13 +31,13 @@ import snapCar.net.CallWsMail;
  * @author agalaz
  *
  */
-public class CierreFactura {
-    private static Logger    logger         = Logger.getLogger( CierreFactura.class );
+public class NoSincro {
+    private static Logger    logger         = Logger.getLogger( NoSincro.class );
     private Connection       cnx;
-    // Es negavtivo porque se buscan los que ya cerraron, justo ayer   
-    private static final int DIAS_AL_CIERRE = -1;
+    private static final int DIAS_AL_CIERRE_01 = 10;
+    private static final int DIAS_AL_CIERRE_02 = 20;
 
-    public CierreFactura(Connection cnx) {
+    public NoSincro(Connection cnx) {
         this.cnx = cnx;
     }
 
@@ -45,30 +45,31 @@ public class CierreFactura {
     public void procesa() {
         Locale.setDefault( new Locale( "es", "ES" ) );
         SimpleDateFormat fmtLargo = new SimpleDateFormat( "EEEE d 'de' MMMM 'de' YYYY " );
+        SimpleDateFormat fmtDia = new SimpleDateFormat( "EEEE" );
+        SimpleDateFormat fmtSimple = new SimpleDateFormat( "dd/MM/YYY" );
+
         try {
             {
-                // Crea tabla temporal wMemoryCierreTransf, se usa el parámetro cero porque se quiere los que ya
-                // vencieron, no los que van a vencer
-                CallableStatement call = cnx.prepareCall( "{ call prControlCierreTransferenciaInicioDef(0)}" );
+                // Crea tabla temporal wMemoryCierreTransf, se usa el parámetro 1, indicando que se quiere los que van a
+                // vencer
+                CallableStatement call = cnx.prepareCall( "{ call prControlCierreTransferenciaInicioDef(1)}" );
                 call.execute();
                 call.close();
             }
             String cSql = "SELECT w.cPatente \n"
-                    + "     , DATE_FORMAT(w.dProximoCierre + INTERVAL -1 MONTH, '%d/%m/%Y')    dInicio \n"
-                    + "     , DATE_FORMAT(w.dProximoCierre                    , '%d/%m/%Y')    dFin \n"
-                    + "     , w.nDiasNoSincro \n"
-                    + "     , u.cEmail, u.cNombre                                              cNombre \n"
-                    + "     , GREATEST( IFNULL(DATE( w.tUltTransferencia), '0000-00-00') \n"
-                    + "               , IFNULL(DATE( w.tUltViaje        ), '0000-00-00') \n"
-                    + "               , IFNULL(DATE( w.tUltControl      ), '0000-00-00'))      dSincro \n"
+                    + ", w.dProximoCierre + INTERVAL -1 MONTH   dInicio \n"
+                    + ", w.dProximoCierre                       dFin \n"
+                    + ", w.nDiasNoSincro \n"
+                    + ", u.cEmail, u.cNombre \n"
                     + " FROM  wMemoryCierreTransf w \n"
                     + "       JOIN tUsuario u ON u.pUsuario = w.fUsuarioTitular \n"
-                    + " WHERE nDiasAlCierre = ?\n"
-                    + " AND   nDiasNoSincro > 0\n"
+                    + " WHERE nDiasAlCierre in ( ?, ? ) \n"
+                    + " AND   w.nDiasNoSincro > 9 "
                     + " AND   w.cPoliza is not null \n"
                     + " AND   w.bVigente = '1' \n";
             PreparedStatement psSql = cnx.prepareStatement( cSql );
-            psSql.setInt( 1, DIAS_AL_CIERRE );
+            psSql.setInt( 1, DIAS_AL_CIERRE_01 );
+            psSql.setInt( 2, DIAS_AL_CIERRE_02 );
             ResultSet rsNotif = psSql.executeQuery();
             // Prepara Webservice envía Mails
             CallWsMail callMail = new CallWsMail();
@@ -78,29 +79,34 @@ public class CierreFactura {
                 String cEmail = rsNotif.getString( "cEmail" );
                 String cNombre = rsNotif.getString( "cNombre" );
                 String cPrimerNombre = cNombre.split( " " )[0];
-                Date dSincro = ConvertDate.toDate( rsNotif.getDate( "dSincro" ) );
 
                 List<Map> to = callMail.createAddressTo( cNombre, cEmail );
 
+                Date dInicio = ConvertDate.toDate( rsNotif.getDate( "dInicio" ) );
+                Date dFin = ConvertDate.toDate( rsNotif.getDate( "dFin" ) );
+
                 Map<String, String> mReg = new HashMap<String, String>();
                 mReg.put( "cPatente", cPatente );
-                mReg.put( "cFecSincro", fmtLargo.format( dSincro ) );
+                mReg.put( "dInicio", fmtSimple.format( dInicio ) );
+                mReg.put( "dFin", fmtSimple.format( dFin ) );
+                mReg.put( "cFecCierre", fmtLargo.format( dFin ) );
+                mReg.put( "cDiaCierre", fmtDia.format( dFin ) );
                 mReg.put( "cNombre", cPrimerNombre );
                 mReg.put( "nDiasNoSincro", String.valueOf( nDiasNoSincro ) );
 
                 try {
-                    callMail.ejecuta( "cerro_periodo_factura", "cerro_periodo", to, mReg );
+                    callMail.ejecuta( "no_sincro_nDias", "no_sincro", to, mReg );
                 } catch (FrameworkException e) {
                     logger.error( "Al enviar mail a " + cEmail + "por la patente " + cPatente, e );
                 }
             }
             rsNotif.close();
             psSql.close();
+        } catch (ConvertException e) {
+            logger.error( "Al convertir fechas de inicio y fin", e );
+            throw new RuntimeException( e );
         } catch (SQLException e) {
             logger.error( "Al lee notificaciones tipo 2", e );
-            throw new RuntimeException( e );
-        } catch (ConvertException e) {
-            logger.error( "Al convertir fecha de sincronización", e );
             throw new RuntimeException( e );
         }
     }
